# www-felix-rath.dev

./: .envrc  .gitignore  Cargo.toml  README.md  favicon-generation-about.txt  flake.nix  input.css  justfile  package.json  rust-toolchain.toml  rustfmt.toml  tailwind.config.js  wrangler.toml
src/: lib.rs
static/: site.webmanifest
support/: zellij-dev-layout.kdl
