[package]
name = "www-felix-rath-dot-dev"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
maud = "0.26.0"
worker = "0.0.24"

[profile.release]
opt-level = "s" # optimize for size
lto = true
strip = true
codegen-units = 1
